fixed text alignment

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -117,7 +117,7 @@ input, select, textarea {
 
 		a:hover {
 			border-bottom-color: transparent;
-			color: #4acaa8 !important;
+			color: #4acaa8  !important;
 		}
 
 	strong, b {
@@ -1785,7 +1785,7 @@ input, select, textarea {
 	}
 
 	header.major h2 {
-		color: #4acaa8;
+		color: #4acaa8 ;
 		font-size: 3.5em;
 	}
 
@@ -1848,7 +1848,7 @@ input, select, textarea {
 		input[type="email"]:focus,
 		select:focus,
 		textarea:focus {
-			border-color: #4acaa8;
+			border-color: #4acaa8 ;
 		}
 
 	select {
@@ -1953,7 +1953,7 @@ input, select, textarea {
 
 		input[type="checkbox"]:focus + label:before,
 		input[type="radio"]:focus + label:before {
-			border-color: #4acaa8;
+			border-color: #4acaa8 ;
 		}
 
 	input[type="checkbox"] + label:before {
@@ -2161,6 +2161,7 @@ input, select, textarea {
 
 		.image img {
 			border-radius: 5px;
+			border: solid;
 			display: block;
 			
 			width: 100%;
@@ -2405,7 +2406,7 @@ input, select, textarea {
 			}
 
 			ul.feature-icons li:before {
-				background: #4acaa8;
+				background: #4acaa8 ;
 				border-radius: 100%;
 				color: #ffffff;
 				display: block;
@@ -2621,7 +2622,7 @@ input, select, textarea {
 		input[type="reset"].primary,
 		input[type="button"].primary,
 		.button.primary {
-			background-color: #4acaa8;
+			background-color: #4acaa8 ;
 			color: #ffffff !important;
 		}
 
@@ -2700,7 +2701,7 @@ input, select, textarea {
 		.features article .inner {
 			display: inline-block;
 			vertical-align: middle;
-			width: 50%;
+			width: 100%;
 		}
 
 			.features article .inner > :last-child {
@@ -2722,7 +2723,7 @@ input, select, textarea {
 		-webkit-justify-content: space-between;
 		-ms-justify-content: space-between;
 		justify-content: space-between;
-		background: #4acaa8;
+		background: #4acaa8 ;
 		color: #d2f2e9;
 		height: 100%;
 		overflow-y: auto;
@@ -2830,7 +2831,7 @@ input, select, textarea {
 
 						#header > nav ul li a.active {
 							background: #fff;
-							color: #4acaa8 !important;
+							color: #4acaa8  !important;
 						}
 
 					#header > nav ul li:first-child {
@@ -3098,7 +3099,7 @@ input, select, textarea {
 					}
 
 					#titleBar .toggle:before {
-						background: #4acaa8;
+						background: #4acaa8 ;
 						color: #ffffff;
 						content: '\f0c9';
 						display: block;
